# ICTPRG434

./: .gitignore  README.md  ictprg434.cast  pyproject.toml
ictprg434/: New Text Document.py  computer_info.csv  main.py  test.py
