[tool.poetry]
name = "ictprg434"
version = "0.1.0"
description = ""
authors = ["Proxay <atcav1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "ictprg434.main:start"